Fixed CodeViewer alignment!

--- a/src/css/CodeViewer.scss
+++ b/src/css/CodeViewer.scss
@@ -11,11 +11,11 @@
 
 .code-viewer-container {
     width: 100%;
-    height: 80%;
+    height: 86%;
     display: flex;
     justify-items: center;
     justify-content: center;
-    // margin: Variables.$margin-components;
+    margin: Variables.$margin-components;
 }
 
 .code-viewer {
@@ -24,7 +24,7 @@
     background: Variables.$kinda-white;
     outline: Variables.$outline;
     // outline-offset: -1.5px;
-    width: 90%;
+    width: 100%;
     height: 96%;
     caret-color: transparent;
     flex-shrink: 0;
